--- a/index.html
+++ b/index.html
@@ -2,53 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Jin Wu's Profile</title>
+    <title>Jin Wu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
   </head>
   <body>
     <div>
-      <div class="main-nav">
-          <ul class="nav">
-            <li><a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></li>
-            <li><a href="Experience.html">Experience</a></li>
-            <li><a href="Project.html">Project</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Collection.html">Collection</a></li>
-          </ul>
-      </div>
-
-      <header>
-        <img src="images/me.jpg" alt="Jin" class="profile-image">
-        <h1 class="tag name">Hello, I’m Jin.</h1>
-        <a class="tag location">I am passionate about life!</a>
-      </header>
-
-      <main class="block">
-        <div class="card">
-          <h2>Background</h2>
-          <p>I’m an aspiring student from UC San Diego. </p>
-        </div>
-
-        <div class="card">
-          <h2>Skills</h2>
-          <ul class="skills">
-            <li>Python</li>
-            <li>CSS</li>
-            <li>HTML</li>
-            <li>C++</li>
-            <li>SolidWork</li>
-          </ul>
-          <ul class="skills">
-            <li>Arduino</li>
-            <li>Inkscape</li>
-            <li>Raspberry Pi</li>
-            <li>Autodesk Eagle</li>
-            <li>Altium Designerk</li>
-          </ul>
-        </div>
-
+      <nav>
+        <ul>
+          <li><a href="index.html"><img src="images/logo.png" alt="Logo" id="logo"></a></li>
+          <li><a href="#">Event</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Resources</a></li>
+          <li><a href="#">Join Us</a></li>
+        </ul>
+      </nav>
+      <main>
+        <hearder>
+          <h1>TAS</h1>
+        </header>
       </main>
       <footer>
         <ul>
