--- a/Collection.html
+++ b/Collection.html
@@ -2,39 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Jin Wu's Profile</title>
+    <title>Jin Wu-Collection</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
   </head>
-  <body background="background">
+  <body>
     <div>
-      <div class="main-nav">
-          <ul class="nav">
-            <li><a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></li>
-            <li><a href="Experience.html">Experience</a></li>
-            <li><a href="Project.html">Project</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Collection.html">Collection</a></li>
-          </ul>
-      </div>
-
-      <main class="table">
-        <header>
-          <div class="collection">
-            <img src="images/supreme.jpg" alt="Supreme Logo">
+      <header class="main-header group">
+          <a href="index.html" class="left">
+            <img src="images/logo.png" alt="Logo" id="logo">
+          </a>
+          <ul class="right">
+          <li><a href="Project.html">Work</a></li>
+          <!-- <li>
+            <span class="dropdown">
+              <a class="dropbtn" href="Project.html">Project</a>
+              <div class="dropdown-content">
+                <a href="#micromouse">MicroMouse</a>
+                <a href="#facebook">AMC Messenger Bot</a>
+                <a href="#facial">Facial Recognition</a>
+                <a href="#neural">Neural Transfer</a>
+                <a href="#boba">Automated Boba Dispenser</a>
+                <a href="#supreme">Supreme Bot</a>
+                <a href="#webpage">Web Design</a>
+              </div>
+            </span>
+          </li> -->
+          <!-- <li><a href="Project.html">Project</a></li> -->
+          <li><a href="Collection.html">AfterHour</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+        </ul>
+      </header>
+        <main>
+          <div class="">
+            <a href="#"><img src="images/supreme.jpg" alt="Supreme Logo"></a>
           </div>
 
-          <div class="collection">
-            <img src="images/nike.jpg" alt="Nike Logo">
+          <div class="">
+            <a href="#"><img src="images/nike.jpg" alt="Nike Logo"></a>
           </div>
 
-          <div class="collection">
-            <img src="images/adidas.jpg" alt="Adidas Logo">
+          <div class="">
+            <a href="#"><img src="images/adidas.jpg" alt="Adidas Logo"></a>
           </div>
-        </header>
-      </main>
-
+        </main>
       <footer>
         <ul>
           <li><a href="https://twitter.com/jinwu0408" target=_blank class="social twitter">Twitter</a></li>
