--- a/Experience.html
+++ b/Experience.html
@@ -2,37 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jin Wu's Profile</title>
+  <title>Jin Wu-Experience</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
-  <body>
+<body>
     <div>
-      <div class="main-nav">
-          <ul class="nav">
-            <li><a href="index.html"><img src="images/logo.png" alt="Logo" class="logo"></li>
+      <nav>
+          <ul>
+            <li><a href="index.html"><img src="images/logo.png" alt="Logo" id="logo"></a></li>
             <li><a href="Experience.html">Experience</a></li>
-            <li><a href="Project.html">Project</a></li>
+            <li>
+              <span class="dropdown">
+                <a class="dropbtn" href="Project.html">Project</a>
+                <div class="dropdown-content">
+                  <a href="Project.html#micromouse">MicroMouse</a>
+                  <a href="Project.html#facebook">AMC Messenger Bot</a>
+                  <a href="Project.html#facial">Facial Recognition</a>
+                  <a href="Project.html#neural">Neural Transfer</a>
+                  <a href="Project.html#boba">Automated Boba Dispenser</a>
+                  <a href="Project.html#supreme">Supreme Bot</a>
+                  <a href="Project.html#webpage">Web Design</a>
+                </div>
+              </span>
+            </li>
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Collection.html">Collection</a></li>
           </ul>
-      </div>
-
-      <main class="block">
-        <div class = "title">
-          <h1>Experience</h1>
-        </div>
-        <div class="contact">
-          <h2>Schneider Electric</h2>
-          <h3>Project Intern</h3>
-          <ul>
-              <li>Programmed in Script on server for HVAC, based on customer Sequence of Operation.</li>
-              <li>Developed UI on server, providing real time data and summary of the HVAC system.</li>
-              <li>Documented As-Built drawings, demonstrated the actual implementation of the blueprint.</li>
-          </ul>
-        </div>
+      </nav>
+      <main>
+        <header>
+          <div class="card">
+            <h2>Schneider Electric</h2>
+              <h3>Project Intern</h3>
+                <ul>
+                    <li>Programmed in Script on server for HVAC, based on customer Sequence of Operation.</li>
+                    <li>Developed UI on server, providing real time data and summary of the HVAC system.</li>
+                    <li>Documented As-Built drawings, demonstrated the actual implementation of the blueprint.</li>
+                </ul>
+                <a class= "callout link" href="">Learn More</a>
+          </div>
+        </header>
       </main>
-
       <footer>
         <ul>
           <li><a href="https://twitter.com/jinwu0408" class="social twitter">Twitter</a></li>
